force-app/main/default/objects/Deliverable__c/Deliverable__c.object-meta.xml
<CustomObject>
    <label>Deliverable</label>
    <nameField>
        <displayFormat>DEL-{000000}</displayFormat>
        <label>Deliverable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>