force-app/main/default/objects/Deliverable__c/fields/Deliverable_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Requirement__c</fullName>
    <description>Used to track deliverable of grant application</description>
    <inlineHelpText>Used to track deliverable of grant application</inlineHelpText>
    <label>Deliverable Requirement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>