force-app/main/default/objects/Deliverable__c/fields/Grant_Application__c.field-meta.xml
<CustomField>
    <fullName>Grant_Application__c</fullName>
    <label>Grant Application</label>
    <referenceTo>GGW_Grant_Application__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>